# py_setuptools

./: .gitignore  CMakeLists.txt  README.md
cmake/: pypi_process.py  util.cmake
setuptools/command/: easy_install.py
